--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.3",
+    "mysql2": "^3.6.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express-validator": "^7.0.1",
@@ -36,6 +37,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
     "@types/pg": "^8.10.9",
+    "@types/mysql": "^2.15.21",
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2",
