--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "type": "git",
     "url": "git+https://github.com/toto01tdma/Nodejs_Book_Management.git"
   },
-  "keywords": ["nodejs", "express", "postgresql", "book-management", "crud"],
+  "keywords": [
+    "nodejs",
+    "express",
+    "postgresql",
+    "book-management",
+    "crud"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -24,20 +30,24 @@
   },
   "homepage": "https://github.com/toto01tdma/Nodejs_Book_Management#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "mysql2": "^3.6.5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "cors": "^2.8.5"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.5",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^20.10.4",
     "@types/pg": "^8.10.9",
-    "@types/mysql": "^2.15.21",
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2",
