--- a/package.json
+++ b/package.json
@@ -39,12 +39,15 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.6.5",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.10",
     "@types/mysql": "^2.15.21",
     "@types/node": "^20.10.4",
     "@types/pg": "^8.10.9",
