--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "models/**/*",
     "routes/**/*",
     "middleware/**/*"
-  ],
+, "services/BookService.ts", "services/UserService.ts"  ],
   "exclude": [
     "node_modules",
     "dist",
