--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "dev": "concurrently \"npm run build:css\" \"npm run dev:server\"",
     "dev:server": "nodemon --exec ts-node server.ts",
-    "build": "tsc",
+    "build": "npm run build:ts && npm run build:css:prod",
+    "build:ts": "tsc",
+    "build:prod": "NODE_ENV=production npm run build",
     "start": "node dist/server.js",
+    "start:prod": "NODE_ENV=production node dist/server.js",
     "build:css": "tailwindcss -i ./src/input.css -o ./public/css/style.css --watch",
-    "build:css:prod": "tailwindcss -i ./src/input.css -o ./public/css/style.css --minify",
+    "build:css:prod": "NODE_ENV=production tailwindcss -i ./src/input.css -o ./public/css/style.css --minify",
+    "clean": "rm -rf dist && rm -f public/css/style.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
