--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "build:css": "tailwindcss -i ./src/input.css -o ./public/css/style.css --watch",
     "build:css:prod": "NODE_ENV=production tailwindcss -i ./src/input.css -o ./public/css/style.css --minify",
     "clean": "rm -rf dist && rm -f public/css/style.css",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false"
   },
   "repository": {
     "type": "git",
@@ -51,15 +54,20 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/morgan": "^1.9.10",
     "@types/mysql": "^2.15.21",
     "@types/node": "^20.10.4",
     "@types/pg": "^8.10.9",
+    "@types/supertest": "^2.0.16",
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "postcss": "^8.5.6",
+    "supertest": "^6.3.4",
     "tailwindcss": "^3.3.6",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
