--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "dev": "concurrently \"npm run build:css\" \"npm run dev:server\"",
     "dev:server": "nodemon --exec ts-node server.ts",
-    "build": "npm run build:ts && npm run build:css:prod",
+    "build": "npm run build:ts && npm run build:css:prod && npm run copy:assets",
     "build:ts": "tsc",
-    "build:prod": "NODE_ENV=production npm run build",
+    "copy:assets": "npm run copy:views && npm run copy:public",
+    "copy:views": "copyfiles \"views/**/*\" dist/",
+    "copy:public": "copyfiles -u 1 \"public/**/*\" dist/",
+    "build:prod": "cross-env NODE_ENV=production npm run build",
     "start": "node dist/server.js",
-    "start:prod": "NODE_ENV=production node dist/server.js",
+    "start:prod": "cross-env NODE_ENV=production node dist/server.js",
     "build:css": "tailwindcss -i ./src/input.css -o ./public/css/style.css --watch",
-    "build:css:prod": "NODE_ENV=production tailwindcss -i ./src/input.css -o ./public/css/style.css --minify",
-    "clean": "rm -rf dist && rm -f public/css/style.css",
+    "build:css:prod": "cross-env NODE_ENV=production tailwindcss -i ./src/input.css -o ./public/css/style.css --minify",
+    "clean": "rimraf dist && rimraf public/css/style.css",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -62,9 +65,12 @@
     "@types/supertest": "^2.0.16",
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
+    "copyfiles": "^2.4.1",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "postcss": "^8.5.6",
+    "rimraf": "^6.0.1",
     "supertest": "^6.3.4",
     "tailwindcss": "^3.3.6",
     "ts-jest": "^29.4.0",
